# serializer version: 1
# name: test_snapshot_config_variants[alphabetical_sort-alpha-None][alphabetical_sort]
  '''
  difftree                [32m+475[0m [31m-68[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  ├── README.md            [32m+20[0m [31m-3[0m [32m                   ▉[0m[31m▉                   [0m [36m  4.2%[0m
  ├── docs/api.md          [32m+25[0m    [32m                   █[0m[31m                    [0m [36m  4.6%[0m
  ├── src                 [32m+320[0m [31m-58[0m[32m      ▐█████████████[0m[31m█████████████████   [0m [36m 69.6%[0m
  │   ├── api/routes.py    [32m+60[0m [31m-8[0m [32m                 ▐██[0m[31m██▎                 [0m [36m 12.5%[0m
  │   ├── main.py          [32m+50[0m [31m-10[0m[32m                  ██[0m[31m██▉                 [0m [36m 11.0%[0m
  │   ├── models          [32m+180[0m [31m-35[0m[32m            ▐███████[0m[31m██████████▎         [0m [36m 39.6%[0m
  │   │   ├── post.py      [32m+80[0m [31m-15[0m[32m                ▕███[0m[31m████▍               [0m [36m 17.5%[0m
  │   │   └── user.py     [32m+100[0m [31m-20[0m[32m               ▕████[0m[31m█████▉              [0m [36m 22.1%[0m
  │   └── utils.py         [32m+30[0m [31m-5[0m [32m                  ▕█[0m[31m█▍                  [0m [36m  6.4%[0m
  └── tests               [32m+110[0m [31m-7[0m [32m               ▐████[0m[31m██                  [0m [36m 21.5%[0m
      ├── test_main.py     [32m+40[0m [31m-2[0m [32m                  ▐█[0m[31m▌                   [0m [36m  7.7%[0m
      └── test_models.py   [32m+70[0m [31m-5[0m [32m                 ███[0m[31m█▍                  [0m [36m 13.8%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[custom_bar_width-size-config6][custom_bar_width]
  '''
  difftree                [32m+475[0m [31m-68[0m[32m██████████████████████████████[0m[31m██████████████████████████████[0m [36m100.0%[0m
  ├── src                 [32m+320[0m [31m-58[0m[32m         ▕████████████████████[0m[31m█████████████████████████▌    [0m [36m 69.6%[0m
  │   ├── models          [32m+180[0m [31m-35[0m[32m                  ▕███████████[0m[31m███████████████▍              [0m [36m 39.6%[0m
  │   │   ├── user.py     [32m+100[0m [31m-20[0m[32m                       ▕██████[0m[31m████████▊                     [0m [36m 22.1%[0m
  │   │   └── post.py      [32m+80[0m [31m-15[0m[32m                         █████[0m[31m██████▌                       [0m [36m 17.5%[0m
  │   ├── api/routes.py    [32m+60[0m [31m-8[0m [32m                          ▉███[0m[31m███▌                          [0m [36m 12.5%[0m
  │   ├── main.py          [32m+50[0m [31m-10[0m[32m                          ▕███[0m[31m████▍                         [0m [36m 11.0%[0m
  │   └── utils.py         [32m+30[0m [31m-5[0m [32m                            ██[0m[31m██▏                           [0m [36m  6.4%[0m
  ├── tests               [32m+110[0m [31m-7[0m [32m                       ███████[0m[31m███                           [0m [36m 21.5%[0m
  │   ├── test_models.py   [32m+70[0m [31m-5[0m [32m                         ▐████[0m[31m██▏                           [0m [36m 13.8%[0m
  │   └── test_main.py     [32m+40[0m [31m-2[0m [32m                           ▐██[0m[31m▉                             [0m [36m  7.7%[0m
  ├── docs/api.md          [32m+25[0m    [32m                            ▐█[0m[31m                              [0m [36m  4.6%[0m
  └── README.md            [32m+20[0m [31m-3[0m [32m                            ▕█[0m[31m█▎                            [0m [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[default_rendering-size-None][default_rendering]
  '''
  difftree                [32m+475[0m [31m-68[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  ├── src                 [32m+320[0m [31m-58[0m[32m      ▐█████████████[0m[31m█████████████████   [0m [36m 69.6%[0m
  │   ├── models          [32m+180[0m [31m-35[0m[32m            ▐███████[0m[31m██████████▎         [0m [36m 39.6%[0m
  │   │   ├── user.py     [32m+100[0m [31m-20[0m[32m               ▕████[0m[31m█████▉              [0m [36m 22.1%[0m
  │   │   └── post.py      [32m+80[0m [31m-15[0m[32m                ▕███[0m[31m████▍               [0m [36m 17.5%[0m
  │   ├── api/routes.py    [32m+60[0m [31m-8[0m [32m                 ▐██[0m[31m██▎                 [0m [36m 12.5%[0m
  │   ├── main.py          [32m+50[0m [31m-10[0m[32m                  ██[0m[31m██▉                 [0m [36m 11.0%[0m
  │   └── utils.py         [32m+30[0m [31m-5[0m [32m                  ▕█[0m[31m█▍                  [0m [36m  6.4%[0m
  ├── tests               [32m+110[0m [31m-7[0m [32m               ▐████[0m[31m██                  [0m [36m 21.5%[0m
  │   ├── test_models.py   [32m+70[0m [31m-5[0m [32m                 ███[0m[31m█▍                  [0m [36m 13.8%[0m
  │   └── test_main.py     [32m+40[0m [31m-2[0m [32m                  ▐█[0m[31m▌                   [0m [36m  7.7%[0m
  ├── docs/api.md          [32m+25[0m    [32m                   █[0m[31m                    [0m [36m  4.6%[0m
  └── README.md            [32m+20[0m [31m-3[0m [32m                   ▉[0m[31m▉                   [0m [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[minimal-size-config5][minimal]
  '''
  difftree               
  ├── src                
  │   ├── models         
  │   │   ├── user.py    
  │   │   └── post.py    
  │   ├── api/routes.py  
  │   ├── main.py        
  │   └── utils.py       
  ├── tests              
  │   ├── test_models.py 
  │   └── test_main.py   
  ├── docs/api.md        
  └── README.md          
  
  '''
# ---
# name: test_snapshot_config_variants[no_bars-size-config2][no_bars]
  '''
  difftree                [32m+475[0m [31m-68[0m [36m100.0%[0m
  ├── src                 [32m+320[0m [31m-58[0m [36m 69.6%[0m
  │   ├── models          [32m+180[0m [31m-35[0m [36m 39.6%[0m
  │   │   ├── user.py     [32m+100[0m [31m-20[0m [36m 22.1%[0m
  │   │   └── post.py      [32m+80[0m [31m-15[0m [36m 17.5%[0m
  │   ├── api/routes.py    [32m+60[0m [31m-8[0m  [36m 12.5%[0m
  │   ├── main.py          [32m+50[0m [31m-10[0m [36m 11.0%[0m
  │   └── utils.py         [32m+30[0m [31m-5[0m  [36m  6.4%[0m
  ├── tests               [32m+110[0m [31m-7[0m  [36m 21.5%[0m
  │   ├── test_models.py   [32m+70[0m [31m-5[0m  [36m 13.8%[0m
  │   └── test_main.py     [32m+40[0m [31m-2[0m  [36m  7.7%[0m
  ├── docs/api.md          [32m+25[0m     [36m  4.6%[0m
  └── README.md            [32m+20[0m [31m-3[0m  [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[no_counts-size-config3][no_counts]
  '''
  difftree               [32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  ├── src                [32m      ▐█████████████[0m[31m█████████████████   [0m [36m 69.6%[0m
  │   ├── models         [32m            ▐███████[0m[31m██████████▎         [0m [36m 39.6%[0m
  │   │   ├── user.py    [32m               ▕████[0m[31m█████▉              [0m [36m 22.1%[0m
  │   │   └── post.py    [32m                ▕███[0m[31m████▍               [0m [36m 17.5%[0m
  │   ├── api/routes.py  [32m                 ▐██[0m[31m██▎                 [0m [36m 12.5%[0m
  │   ├── main.py        [32m                  ██[0m[31m██▉                 [0m [36m 11.0%[0m
  │   └── utils.py       [32m                  ▕█[0m[31m█▍                  [0m [36m  6.4%[0m
  ├── tests              [32m               ▐████[0m[31m██                  [0m [36m 21.5%[0m
  │   ├── test_models.py [32m                 ███[0m[31m█▍                  [0m [36m 13.8%[0m
  │   └── test_main.py   [32m                  ▐█[0m[31m▌                   [0m [36m  7.7%[0m
  ├── docs/api.md        [32m                   █[0m[31m                    [0m [36m  4.6%[0m
  └── README.md          [32m                   ▉[0m[31m▉                   [0m [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[no_percentages-size-config4][no_percentages]
  '''
  difftree                [32m+475[0m [31m-68[0m[32m████████████████████[0m[31m████████████████████[0m
  ├── src                 [32m+320[0m [31m-58[0m[32m      ▐█████████████[0m[31m█████████████████   [0m
  │   ├── models          [32m+180[0m [31m-35[0m[32m            ▐███████[0m[31m██████████▎         [0m
  │   │   ├── user.py     [32m+100[0m [31m-20[0m[32m               ▕████[0m[31m█████▉              [0m
  │   │   └── post.py      [32m+80[0m [31m-15[0m[32m                ▕███[0m[31m████▍               [0m
  │   ├── api/routes.py    [32m+60[0m [31m-8[0m [32m                 ▐██[0m[31m██▎                 [0m
  │   ├── main.py          [32m+50[0m [31m-10[0m[32m                  ██[0m[31m██▉                 [0m
  │   └── utils.py         [32m+30[0m [31m-5[0m [32m                  ▕█[0m[31m█▍                  [0m
  ├── tests               [32m+110[0m [31m-7[0m [32m               ▐████[0m[31m██                  [0m
  │   ├── test_models.py   [32m+70[0m [31m-5[0m [32m                 ███[0m[31m█▍                  [0m
  │   └── test_main.py     [32m+40[0m [31m-2[0m [32m                  ▐█[0m[31m▌                   [0m
  ├── docs/api.md          [32m+25[0m    [32m                   █[0m[31m                    [0m
  └── README.md            [32m+20[0m [31m-3[0m [32m                   ▉[0m[31m▉                   [0m
  
  '''
# ---
# name: test_snapshot_scenarios[binary_file-changes4][binary_file]
  '''
  difftree                [32m+15[0m [31m-3[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  ├── src/code.py         [32m+10[0m [31m-2[0m[32m      ▕█████████████[0m[31m█████████████▎      [0m [36m 66.7%[0m
  ├── README.md            [32m+5[0m [31m-1[0m[32m             ▐██████[0m[31m██████▋             [0m [36m 33.3%[0m
  └── assets                    [32m                    [0m[31m                    [0m [36m  0.0%[0m
      ├── image.png  [2m[Binary][0m   [32m                    [0m[31m                    [0m       
      └── data.bin   [2m[Binary][0m   [32m                    [0m[31m                    [0m       
  
  '''
# ---
# name: test_snapshot_scenarios[deep_nesting-changes1][deep_nesting]
  '''
  difftree/a/b         [32m+45[0m [31m-10[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  ├── c                [32m+35[0m [31m-8[0m [32m    ▐███████████████[0m[31m████████████████    [0m [36m 78.2%[0m
  │   ├── d/e/file.py  [32m+20[0m [31m-5[0m [32m           █████████[0m[31m██████████          [0m [36m 45.5%[0m
  │   └── x/y/file.py  [32m+15[0m [31m-3[0m [32m             ▐██████[0m[31m██████              [0m [36m 32.7%[0m
  └── file.py          [32m+10[0m [31m-2[0m [32m               ▐████[0m[31m████                [0m [36m 21.8%[0m
  
  '''
# ---
# name: test_snapshot_scenarios[only_additions-changes2][only_additions]
  '''
  difftree              [32m+100[0m [32m████████████████████[0m[31m                    [0m [36m100.0%[0m
  ├── new_file1.py       [32m+50[0m [32m          ██████████[0m[31m                    [0m [36m 50.0%[0m
  ├── new_file2.py       [32m+30[0m [32m              ██████[0m[31m                    [0m [36m 30.0%[0m
  └── dir/new_file3.py   [32m+20[0m [32m                ████[0m[31m                    [0m [36m 20.0%[0m
  
  '''
# ---
# name: test_snapshot_scenarios[only_deletions-changes3][only_deletions]
  '''
  difftree               [31m-100[0m[32m                    [0m[31m████████████████████[0m [36m100.0%[0m
  ├── old_file1.py       [31m-50[0m [32m                    [0m[31m██████████          [0m [36m 50.0%[0m
  ├── old_file2.py       [31m-30[0m [32m                    [0m[31m██████              [0m [36m 30.0%[0m
  └── dir/old_file3.py   [31m-20[0m [32m                    [0m[31m████                [0m [36m 20.0%[0m
  
  '''
# ---
# name: test_snapshot_scenarios[small_tree-changes0][small_tree]
  '''
  difftree      [32m+15[0m [31m-3[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  ├── main.py   [32m+10[0m [31m-2[0m[32m      ▕█████████████[0m[31m█████████████▎      [0m [36m 66.7%[0m
  └── utils.py   [32m+5[0m [31m-1[0m[32m             ▐██████[0m[31m██████▋             [0m [36m 33.3%[0m
  
  '''
# ---
